<resources>
    <string name="app_name">Zetrixweb Practical</string>

    <string name="internal_server_error">Internal server error</string>
    <string name="something_went_wrong">Some thing went wrong, Please try again!</string>
    <string name="url_not_found">URL not found</string>
    <string name="unauthorized">Given authorization token is invalid, please login again</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
</resources>